# Crud_Auth_Rust_mysql

./: .gitignore  Cargo.toml
src/: main.rs  utils.rs
src/Anots/: read.md
src/Anots/1 - introdution/: 4 -installing actix web.md
src/Anots/10 - Transactions/: 1 - Transaction ouline.md  2 - List all Transactions.md
src/Anots/2 - moneyflow/: 1- modeyflow requirements.md
src/Anots/3 - Database Setup with Sqlx/: 1 - Adding SQLX and SLX CLI.md  2 - Database Migrations Users Table.md  3 - Database Migrations Categories table.md  4 - Database Migrations Transations table.md
src/Anots/4 - Basic Controller Setup/: 1 - Basic Controller.md
src/Anots/5 - implementing sign up/: 1 - Creating SignUp Request.md  3 - App State Database Pool.md  4 - First database query.md  6 -Creating the User Record.md  7 - Returning Json response.md
src/Anots/6-implementing Signin/: 1- Verifying credentials.md  2 - Creating and returning JWT.md
src/Anots/7 - Autentication/: 1 - Creating the JWt verification middleware.md  2 - Using JWT Verification Middleware.md  3- Testing Autnetication.md  4 - Utlity Get user ID.md
src/Anots/8 - User profile/: 1-implementing get profile.md  2 - implementing Update Profile.md  3 - Refactor Get Authenticated user.md
src/Anots/9 - Managing Categories/: 1 - Categories outline.md  2 - Create category.md  3 - List all categories.md  4 - show categories.md  5 - update categories.md  (+2 more)
src/controllers/: auth.rs  categories.rs  me.rs  mod.rs  transactions.rs  users.rs
src/db/: category.rs  mod.rs  transactions.rs  user.rs
src/middleware/: auth.rs
