[package]
name = "crud_mysql_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
bcrypt = "0.17.1"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

sqlx = { version = "0.8", features = ["mysql", "tls-rustls", "runtime-tokio", "runtime-tokio-native-tls", "chrono"] }


tokio = { version = "1", features = ["full"] }
